<resources>
    <string name="app_name">Modular Cubes App</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_of_cubes">Number of Cubes: %1s<br/>Time Left: %2$.2f </string>
    <string name="get_an_orientation">%1d</string>
    <string name="start_game">START</string>
    <string name="start_all">ON All</string>
    <string name="stop_all">OFF All</string>
    <string name="score">Score: %1d</string>
    <string name="noCubes">Not connected to CUBE_MESH</string>
    <string name="switchonall">SwitchOnAll</string>
</resources>
