<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.manugildev.modularcubes.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="3">

    </GridLayout>

    <ProgressBar
        android:id="@+id/progressBarTimer"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-1dp"
        android:max="290"
        android:scrollbarSize="50dip"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvNumberCubes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:layout_toEndOf="@+id/progressBarTimer"
        android:text="@string/number_of_cubes"/>

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:layout_toEndOf="@+id/progressBarTimer"
        android:text="@string/score"/>

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/timeCircularProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        app:cpb_background_progressbar_color="#66385cfd"
        app:cpb_background_progressbar_width="15dp"
        app:cpb_progressbar_color="#385cfd"
        app:cpb_progressbar_width="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/timeCircularProgressBar"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timeCircularProgressBar"
            android:layout_centerHorizontal="true"
            android:text="@string/start_game"
            android:visibility="visible"/>

        <Button
            android:id="@+id/buttonSumOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="SumOK"
            android:visibility="visible"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="0"
        android:textColor="#385cfd"
        android:textSize="90sp"
        android:textStyle="bold"/>

</RelativeLayout>
